trying to add html

--- a/elebel.html
+++ b/elebel.html
@@ -80,7 +80,8 @@
       If you already have a photo and description, you can load them by pressing
       ctrl + L.
     </li>
-    <li>you can try my other blog app by clicking the link below.</li>
+    <li>you can try my anohter app by clicking the link below.</li>
+    </li>
     <li>
       <u>
         <a
