--- a/index.html
+++ b/index.html
@@ -66,33 +66,53 @@
         width: 200px;
         height: 200px;
       }
+
+      .info{
+        max-height: 0px;
+        overflow: hidden;
+        transition: max-height 0.5s ease-in-out;
+      }
+      .info.active{
+        max-height: 300px;
+        overflow: visible;
+      }
     </style>
   </head>
   <body>
-    <h2>information about this app:</h2>
-    <li>you can upload multiple images</li>
-    <li>you can preview the images before uploading</li>
-    <li>You can write a description.</li>
-    <li>
-      If you want to save your photo and description, press ctrl + s to save.
-    </li>
-    <li>
-      If you already have a photo and description, you can load them by pressing
-      ctrl + L.
-    </li>
-    <li>you can try my anohter app by clicking the link below.</li>
-    </li>
-    <li>
-      <u>
-        <a
-          target="_blank"
-          href="https://azadsarxanli.github.io/rich-text-editor/"
-        >
-          https://azadsarxanli.github.io/rich-text-editor/
-        </a>
-      </u>
-    </li>
-
+    <h1 style="font-size:14px ; cursor: pointer;" >
+      click to see details of app
+    </h1>
+   <div class="info">
+      <h2>information about this app:</h2>
+      <li>you can upload multiple images</li>
+      <li>you can preview the images before uploading</li>
+      <li>You can write a description.</li>
+      <li>
+        If you want to save your photo and description, press ctrl + s to save.
+      </li>
+      <li>
+        If you already have a photo and description, you can load them by pressing
+        ctrl + L.
+      </li>
+      <li>you can try my anohter app by clicking the link below.</li>
+      </li>
+      <li>
+        <u>
+          <a
+            target="_blank"
+            href="https://azadsarxanli.github.io/rich-text-editor/"
+          >
+            https://azadsarxanli.github.io/rich-text-editor/
+          </a>
+        </u>
+      </li>
+   </div>
+   <script>
+    // select h1 and .info to show and hide
+    document.querySelector("h1").addEventListener("click", function(){
+      document.querySelector(".info").classList.toggle("active");
+    });
+   </script>
     <div class="container">
       <div class="div" contenteditable="true"></div>
       <input type="file" multiple id="input" class="custom-file-input input" />
